--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -27,7 +27,7 @@
   padding-top: 60px;
 }
 .main .icon {
-  width: 34px;
+  width: 50px;
 }
 .main h3 {
   font-size: 32px;
@@ -62,6 +62,10 @@
   cursor: pointer;
 }
 .main .result {
+  font-size: 18px;
   font-weight: bold;
-  margin-top: 40px;
+  color: #333333;
+  text-align: center;
+  margin-top: 20px;
+  max-width: 100%;
 }
